<resources>
    <string name="app_name">MDDemo</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_activity_settings">Settings</string>

    <string name="ganhuo">干货 &#038; 福利</string>

    <string name="pre_refresh_data" translatable="false">refresh_data</string>
    <string name="pre_get_image" translatable="false">get_image</string>
    <string name="pre_cache_size" translatable="false">cache_size</string>
    <string name="pre_feedback" translatable="false">feedback</string>
    <string name="pre_author" translatable="false">author</string>
    <string name="pre_version" translatable="false">version</string>
    <string name="pre_nav_color" translatable="false">pre_nav_color</string>
    <string name="pre_use_local" translatable="false">pre_use_local</string>
    <string name="pre_status_bar" translatable="false">pre_status_bar</string>



    <string name="about_msg">此应用是基于MD的支持库实现的，是针对此支持库的一个小Demo，其中的api来源于豆瓣(首页的电影部分由于时间原因还未完成)，开发测试机为魅族，Android版本5.1。
    \n\n 作者:_SOLID
    \n\n 简书主页 http://www.jianshu.com/users/6725c8e8194f
    \n\n GitHub主页 https://github.com/burgessjp
    \n\n 新浪微博ID:_SOLID(之后的新文章会第一时间分享到新浪微博)</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string><string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
